Fix for page tools visibility on mobile and fluid-container (see #100, #105, #123, and more). This is not a resolution patch but is the beginning. Thanks for all reporters!

--- a/css/template.less
+++ b/css/template.less
@@ -215,12 +215,16 @@ nav {
 #dw__pagetools {
 
   position: absolute;
-  top: 2em;
-  right: -40px;
-  width: 40px;
+  top: 15px;
+  width: 0;
+  right: 45px;
 
   ul li a {
-    padding: 5px;
+    padding: 2px;
+
+    &:hover {
+      background: transparent;
+    }
   }
 
   .tools {
@@ -228,6 +232,7 @@ nav {
   }
 
 }
+
 
 /* Extension Manager */
 #extension__manager {
